--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VOCOR test</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./CSS/main/main.css" />
+    <link rel="stylesheet" href="./CSS/user/user.css" />
   </head>
   <body>
     <div class="loader" id="loader">
@@ -20,11 +21,50 @@
           class="logo"
         />
         <div class="botones">
-          <button class="loginBut">Ingresar</button>
-          <button class="registerBut">Registrarse</button>
+          <button class="loginBut" id="loginBut">Ingresar</button>
+          <button class="registerBut" id="registerBut">Registrarse</button>
+          <button class="userBut" id="userBut">Sample User</button>
         </div>
       </div>
       <div class="mainTexture"></div>
+      <div class="userContainer" id="userContainer">
+        <div class="userSlide">
+          <div class="userHeader">
+            <div class="exit">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="44"
+                height="44"
+                fill="currentColor"
+                class="bi bi-x-circle"
+                viewBox="0 0 16 16"
+                id="exit"
+              >
+                <path
+                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"
+                />
+                <path
+                  d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"
+                />
+              </svg>
+            </div>
+            <div class="profile">
+              <img
+                src="https://st3.depositphotos.com/4111759/13425/v/600/depositphotos_134255710-stock-illustration-avatar-vector-male-profile-gray.jpg"
+                alt="profilepic"
+              />
+              <span>Sample User</span>
+            </div>
+          </div>
+          <div class="actionButs">
+            <button class="eachActionBut topBut">Some</button>
+            <button class="eachActionBut">Actions</button>
+            <button class="eachActionBut">May be</button>
+            <button class="eachActionBut">Done</button>
+            <button class="eachActionBut botBut">Here</button>
+          </div>
+        </div>
+      </div>
       <div class="main1">
         <div class="header">
           <span class="mainText">VOCOR</span>
@@ -104,5 +144,6 @@
       </div>
     </div>
   </body>
-  <script src="main.js"></script>
+  <script src="./JS/main.js"></script>
+  <script src="./JS/user.js"></script>
 </html>
