not found page and fixes

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
             <button class="eachActionBut">May be</button>
             <button class="eachActionBut">Done</button>
             <button class="eachActionBut botBut">Here</button>
+            <a
+              href="https://drive.google.com/drive/folders/1fesyfk8hDx5-9OfXDMzY5UiI1IghTI0M?usp=share_link"
+              target="_blank"
+              >Desarrolladores</a
+            >
           </div>
         </div>
       </div>
@@ -121,15 +126,15 @@
           <span>¡Empezá ahora!</span>
         </div>
         <div class="middleBotones">
-          <button>
+          <button class="plansBut">
             <span>Plan <b>Normal</b></span>
             <img src="./images/VOCOR_wifi1.png" alt="img1" />
           </button>
-          <button>
+          <button class="plansBut">
             <span>Plan <b>Pro</b></span>
             <img src="./images/VOCOR_wifi2.png" alt="img1" />
           </button>
-          <button>
+          <button class="plansBut">
             <span>Plan <b>Premium</b></span>
             <img src="./images/VOCOR_wifi3.png" alt="img1" />
           </button>
@@ -144,6 +149,7 @@
       </div>
     </div>
   </body>
+  <script src="./JS/buttons.js"></script>
   <script src="./JS/main.js"></script>
   <script src="./JS/user.js"></script>
 </html>
