animations for the index buttons

--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
           <span>¡Empezá ahora!</span>
         </div>
         <div class="middleBotones">
-          <button class="plansBut">
+          <button class="plansBut goUp" id="btnPlan1">
             <span>Plan <b>Normal</b></span>
             <img src="./images/VOCOR_wifi1.png" alt="img1" />
           </button>
-          <button class="plansBut">
+          <button class="plansBut goUp" id="btnPlan2">
             <span>Plan <b>Pro</b></span>
             <img src="./images/VOCOR_wifi2.png" alt="img1" />
           </button>
-          <button class="plansBut">
+          <button class="plansBut goUp" id="btnPlan3">
             <span>Plan <b>Premium</b></span>
             <img src="./images/VOCOR_wifi3.png" alt="img1" />
           </button>
@@ -149,6 +149,7 @@
       </div>
     </div>
   </body>
+  <script src="./JS/animations.js"></script>
   <script src="./JS/buttons.js"></script>
   <script src="./JS/main.js"></script>
   <script src="./JS/user.js"></script>
