--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VOCOR test</title>
+    <title>VOCOR</title>
+    <link rel="icon" href="./images/VOCOR_logomini.png" type="image/x-icon" />
     <link rel="stylesheet" href="./CSS/main/main.css" />
     <link rel="stylesheet" href="./CSS/user/user.css" />
   </head>
@@ -14,12 +15,15 @@
     </div>
     <div class="container" id="container">
       <div class="upperBanner">
-        <img
-          src="./images/VOCOR_logo.png"
-          alt="logo"
-          width="150px"
-          class="logo"
-        />
+        <a href="#">
+          <img
+            src="./images/VOCOR_logo.png"
+            alt="logo"
+            width="150px"
+            class="logo"
+            href="index.html"
+          />
+        </a>
         <div class="botones">
           <button class="loginBut" id="loginBut">Ingresar</button>
           <button class="registerBut" id="registerBut">Registrarse</button>
@@ -151,6 +155,7 @@
   </body>
   <script src="./JS/animations.js"></script>
   <script src="./JS/buttons.js"></script>
+  <script src="./JS/loader.js"></script>
   <script src="./JS/main.js"></script>
   <script src="./JS/user.js"></script>
 </html>
