--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
           <span>¡Empezá ahora!</span>
         </div>
         <div class="middleBotones">
-          <button class="plansBut goUp" id="btnPlan1">
+          <button class="plansBut goUp" id="animation1">
             <span>Plan <b>Normal</b></span>
             <img src="./images/VOCOR_wifi1.png" alt="img1" />
           </button>
-          <button class="plansBut goUp" id="btnPlan2">
+          <button class="plansBut goUp" id="animation2">
             <span>Plan <b>Pro</b></span>
             <img src="./images/VOCOR_wifi2.png" alt="img1" />
           </button>
-          <button class="plansBut goUp" id="btnPlan3">
+          <button class="plansBut goUp" id="animation3">
             <span>Plan <b>Premium</b></span>
             <img src="./images/VOCOR_wifi3.png" alt="img1" />
           </button>
@@ -153,7 +153,7 @@
       </div>
     </div>
   </body>
-  <script src="./JS/animations.js"></script>
+  <script src="./JS/animationsMain.js"></script>
   <script src="./JS/buttons.js"></script>
   <script src="./JS/loader.js"></script>
   <script src="./JS/main.js"></script>
