--- a/normalPlan.html
+++ b/normalPlan.html
@@ -79,18 +79,18 @@
     </div>
     <div class="main2">
       <div class="site1">
-        <span><b>4 GB</b> mensuales para usar como quieras, con la
+        <span id="animation1" class="goRight"><b>4 GB</b> mensuales para usar como quieras, con la
           posibilidad de ampliarlos cuando quieras por un pequeño cargo
           extra.
         </span>
       </div>
       <div class="site2">
-        <span>Uso <b>GRATUITO</b> de aplicaciones de mensajería como
+        <span id="animation2" class="goLeft">Uso <b>GRATUITO</b> de aplicaciones de mensajería como
           Whatsapp, MSG y Messenger.
         </span>
       </div>
       <div class="site3">
-        <span>Servicio Lite, 3G y 4G disponible las <b>24 horas</b> del
+        <span id="animation3" class="goRight">Servicio Lite, 3G y 4G disponible las <b>24 horas</b> del
           día.
         </span>
       </div>
@@ -106,6 +106,7 @@
       </span>
     </div>
 </body>
+<script src="./JS/animationsMain.js"></script>
 <script src="./JS/user.js"></script>
 <script src="./JS/loader.js"></script>
 </html>
