one extra slice on index

--- a/index.html
+++ b/index.html
@@ -125,7 +125,23 @@
           </svg>
         </div>
       </div>
+      <div class="mainTexture2"></div>
       <div class="main2">
+        <div class="spaceLeft goLeft" id="animation4">
+          <h1>¿Qué es VOCOR?</h1>
+          <p>
+            <b>VOCOR</b> es una página dedicada a la venta de <b>PACKS</b> de
+            <b>WIFI</b> para mejorar tu experiencia para realizar tus viajes.
+          </p>
+        </div>
+        <div class="spaceRight">
+          <img
+            src="./images/plane takeoff transparent.png"
+            alt="planeTakeOff"
+          />
+        </div>
+      </div>
+      <div class="main3">
         <div class="middleText">
           <span>¡Empezá ahora!</span>
         </div>
@@ -144,7 +160,7 @@
           </button>
         </div>
       </div>
-      <div class="main3">
+      <div class="main4">
         <span>
           LEGAL INFORMATION: Lorem ipsum dolor sit amet consectetur, adipisicing
           elit. Quod labore aut, dolore modi minus quidem corrupti quis atque
